# cranelift

cranelift-codegen/meta-python/: gen_encoding.py
cranelift-codegen/meta-python/cdsl/: predicates.py
cranelift-codegen/meta-python/isa/x86/: encodings.py  recipes.py
cranelift-codegen/meta/src/: gen_encodings.rs
cranelift-codegen/src/: predicates.rs
cranelift-codegen/src/isa/: registers.rs
cranelift-codegen/src/regalloc/: affinity.rs  coloring.rs  liveness.rs  reload.rs  spilling.rs
cranelift-object/: Cargo.toml
cranelift-object/src/: backend.rs  lib.rs  traps.rs
filetests/isa/x86/: legalize-br-icmp.clif  optimized-zero-constants-32bit.clif  optimized-zero-constants.clif
filetests/regalloc/: constraints.clif
