[package]
name = "cranelift-object"
version = "0.40.0"
authors = ["The Cranelift Project Developers"]
description = "Emit Cranelift output to native object files with `object`"
repository = "https://github.com/CraneStation/cranelift"
documentation = "https://cranelift.readthedocs.io/"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
edition = "2018"

[dependencies]
cranelift-codegen = { path = "../cranelift-codegen", version = "0.40.0" }
cranelift-module = { path = "../cranelift-module", version = "0.40.0" }
object = { git = "https://github.com/philipc/object", branch = "write", default-features = false, features = ["write"] }
target-lexicon = "0.4.0"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "CraneStation/cranelift" }
